# client-defensive

./: AsymmetricEncryption.cpp  AsymmetricEncryption.h  CMakeLists.txt  ClientInstructions.cpp  ClientInstructions.h  CommunicationProtocol.cpp  CommunicationProtocol.h  FileTransfer.cpp  FileTransfer.h  PublicKeyHandler.cpp  PublicKeyHandler.h  SymmetricEncryption.cpp  SymmetricEncryption.h  client.cpp  client.h  file.txt  main.cpp
Network/: NetworkManager.cpp  NetworkManager.h  ServerInfo.cpp  ServerInfo.h
Requests/: CRCRequest.cpp  CRCRequest.h  FileRequest.cpp  FileRequest.h  KeyRequest.cpp  KeyRequest.h  ReconnectRequest.cpp  ReconnectRequest.h  RegistrationRequest.cpp  RegistrationRequest.h  RequestBase.cpp  RequestBase.h
